tree-sitter-ix/grammar.js
    source_file: ($) =>
      choice(
        seq(
          $.module_header,
          repeat($._module_statement),
          $.module_return_statement,
        ),
        repeat1($._module_statement),
      ),

    _module_statement: ($) =>
      choice(
        $.declare_effect_statement,
        $.effect_statement,
        $.declare_record_statement,
        $.type_declaration_statement,
        $.import_statement,
        $.module_binding_statement,
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    _statement: ($) =>
      choice(
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.return_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    binding_statement: ($) =>
      seq(
        field("kind", choice("let", "const")),
        optional(field("recursive", "rec")),
        optional(field("linear", "!")),
        field(
          "name",
          choice($.identifier, $.wildcard, $.destructuring_pattern),
        ),
        optional(seq(":", field("type", $.type_reference))),
        "=",
        field("value", $._expression),
      ),

    effect_row: ($) => $._effect_row_expression,

    _effect_row_expression: ($) =>
      choice(
        $.effect_union_expression,
        $.effect_intersection_expression,
        $.effect_difference_expression,
        $.parenthesized_effect_expression,
        $.effect_family_reference,
        $.effect_row_variable,
        $.effect_operation_reference,
      ),

    effect_union_expression: ($) =>
      prec.left(
        PREC.EFFECT_UNION,
        seq(
          field("left", $._effect_row_expression),
          "|",
          field("right", $._effect_row_expression),
        ),
      ),

    effect_family_reference: ($) => field("effect", $.effect_identifier),

    effect_row_variable: ($) => field("name", $.row_variable),

    unit_pattern: () => seq("(", ")"),

    type_declaration_statement: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        repeat(field("parameter", $.identifier)),
        "=",
        field(
          "definition",
          choice($.type_sum, $.type_product, $.type_reference),
        ),
      ),

    type_sum: ($) =>
      seq(
        optional("|"),
        $.type_case,
        repeat(seq("|", $.type_case)),
      ),

    type_case: ($) =>
      seq(
        ".",
        field("name", $.identifier),
        optional(
          seq(
            "=",
            field("payload", alias($.type_intersection, $.type_reference)),
          ),
        ),
      ),

    type_product: ($) =>
      choice($.named_type_product, $.positional_type_product),

    named_type_product: ($) =>
      seq(
        "[",
        optional(commaSep1($.named_type_field)),
        "]",
      ),

    named_type_field: ($) =>
      seq(
        ".",
        field("name", $.identifier),
        "=",
        field("type", $.type_reference),
      ),

    positional_type_product: ($) =>
      seq("[", optional(commaSep1($.type_reference)), "]"),

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.try_with_expression,
        $.loop_expression,
        $.arrow_function,
        $.recursive_function,
        $.recursive_call_expression,
        $.if_expression,
        $.binary_expression,
        $.is_expression,
        $.unary_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.struct_expression,
        $.extension_expression,
        $.effect_handler_expression,
        $._primary_expression,
      ),

    arrow_function: ($) =>
      prec.right(
        PREC.ARROW,
        seq(
          field("parameters", choice($.parameter, $.parameter_list)),
          "=>",
          field("body", $._expression),
        ),
      ),

    parameter_list: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          choice(
            ifLetCondition($),
            seq("(", ifLetCondition($), ")"),
            field("condition", $.condition_expression),
          ),
          field("consequence", prec.dynamic(10, $.block)),
          optional(
            seq(
              "else",
              field(
                "alternative",
                choice(
                  prec.dynamic(10, $.block),
                  prec.dynamic(10, $.if_expression),
                ),
              ),
            ),
          ),
        ),
      ),

    condition_expression: ($) =>
      choice(
        $.condition_binary_expression,
        $.condition_is_expression,
        $.condition_unary_expression,
        $.condition_call_expression,
        $.condition_field_expression,
        $.condition_index_expression,
        $.condition_parenthesized_expression,
        $.number,
        $.string,
        $.character,
        $.boolean,
        $.atom_expression,
        alias("loop", $.identifier),
        $.identifier,
        $.linear_reference,
        $.union_case,
      ),

    condition_is_expression: ($) =>
      prec.left(
        PREC.COMPARE,
        seq(
          field("value", $.condition_expression),
          field("operator", "is"),
          field("type", $.type_reference),
        ),
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field(
            "operator",
            choice("-", "!", "&", "borrow", "freeze", "comptime"),
          ),
          field("operand", $._expression),
        ),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("object", $._expression),
          ".",
          field("field", $.identifier),
        ),
      ),

    atom_expression: ($) =>
      seq(
        "#",
        field("name", alias($.row_variable, $.identifier)),
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    type_reference: ($) => $._type_expression,

    _type_expression: ($) => choice($.function_type, $.type_union),

    function_type: ($) =>
      prec.right(
        PREC.TYPE_ARROW,
        seq(
          field("parameter", $.type_union),
          "->",
          optional(field("effects", $.latent_effect_row)),
          field("result", $._type_expression),
        ),
      ),

    type_union: ($) =>
      prec.left(
        PREC.TYPE_UNION,
        choice(
          $.type_intersection,
          seq(
            field("left", $.type_union),
            "|",
            field("right", $.type_intersection),
          ),
        ),
      ),

    type_intersection: ($) =>
      prec.left(
        PREC.TYPE_INTERSECTION,
        choice(
          $.type_difference,
          seq(
            field("left", $.type_intersection),
            "&",
            field("right", $.type_difference),
          ),
        ),
      ),

    type_difference: ($) =>
      prec.left(
        PREC.TYPE_DIFFERENCE,
        choice(
          $._type_application,
          seq(
            field("left", $.type_difference),
            "\\",
            field("right", $._type_application),
          ),
        ),
      ),

    latent_effect_row: ($) => seq("<", field("row", $.effect_row), ">"),

    _type_application: ($) => choice($.type_application, $._type_prefix),

    type_application: ($) =>
      prec.left(
        PREC.TYPE_APPLICATION,
        seq(
          field("constructor", $._type_prefix),
          repeat1(field("argument", $._type_prefix)),
        ),
      ),

    _type_prefix: ($) =>
      choice($.atom_type, $.frozen_type, $.borrow_type, $._type_atom),

    atom_type: ($) =>
      seq(
        "#",
        field("name", alias($.row_variable, $.identifier)),
      ),

    frozen_type: ($) =>
      seq(
        "#",
        choice(
          field("name", alias($.effect_identifier, $.identifier)),
          $.type_parenthesized,
        ),
      ),

    borrow_type: ($) => seq("&", choice($.identifier, $.type_parenthesized)),

    unit_type: () => prec(-1, seq("(", ")")),

    top_type: () => "_",

    type_parenthesized: ($) =>
      seq("(", field("value", $._type_expression), ")"),

    identifier: () => /[A-Za-z][A-Za-z0-9_]*/,

    effect_identifier: () => /[A-Z][A-Za-z0-9]*/,

    row_variable: () => /[a-z_][A-Za-z0-9_]*/,

    number: () => /[0-9]+(i32|i64)?/,
